@@ -1,3 +1,10 @@
+2016-10-25  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-551
+
+	* src/m_optproperties.cc (TestScatDataInterp): So far just a test
+	of a potential test.
+
 2016-10-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-550
